--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
 </head>
 
 <body>
@@ -48,6 +48,8 @@
         <p>Adirondack Red</p>
         <h3>Adirondack Red</h3>
         <p>§500</p>
+        <p><a href="adirondack.html">View</a></p><br>
+        Adirondack Red
 
     </main>
 </body>
