--- a/adirondack.html
+++ b/adirondack.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guitars</title>
+    <title>Document</title>
 </head>
-
 
 <body>
     <header>
@@ -24,7 +23,13 @@
 </body>
 
 <main>
-    <h1>Guitars</h1>
+    <h1>Adirondack Red</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut ullam iure repellat culpa molestias. In facere quam
+        aliquid recusandae iste corporis ab ullam quod accusantium eveniet quasi molestiae, cumque commodi.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+    <h3>§500</h3>
+    <br>
+    <h3><a href="contact.html">Contact Us</a></h3>
 </main>
 
 </html>
