--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us</title>
 </head>
 
 <body>
@@ -18,7 +18,12 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+
     </header>
 </body>
+
+<main>
+    <h1>Contact Us</h1>
+</main>
 
 </html>
