--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
-    <title>Homepage</title>
+    <meta name="description" content="Get real uthentic, hand-crafted guitars from Guitar Kings" />
+    <title>Guitar Kings | Home" </title>
 </head>
 
 <body>
     <header>
-        <h1>Guitar Kings</h1>
+        <a href="index.html">Guitar Kings</a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -18,42 +19,77 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <section>
+            <h1>Authentic Handmade Guitars</h1>
+            <a href="guitars.html">View Guitars</a>
+        </section>
 
     </header>
     <main>
-        <h1>Authentic Handmade Guitars</h1>
+        <section>
+            <div>
+                <h2>Our Gitars Are:</h2>
+                <ul>
+                    <li>Made with real Pennsylvanian wood</li>
+                    <li>Crafted by a family-run business</li>
+                    <li>Built to last a lifetime</li>
+                    <li>Beautiful unique sound</li>
+                    <li>Options for all music lovers</li>
+                </ul>
+            </div>
+        </section>
+        <img img src="#" alt="Hand Strumming Guitar">
+        <section>
+            <h2>Reviews</h2>
+            <div>
+                <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse provident ducimus explicabo ad
+                    minima, nemo
+                    beatae!"- Bob Willis</p>
+                <img src="#" alt="Profile Picture of Bob Willis" />
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit."- Sally Oldfield</p>
+                <img src="#" alt="Profile Picture of Sally Oldfield" />
+            </div>
+            <section>
+                <h2>View Our Guitars</h2>
+                <div>
+                    <img src="#" alt="Adirondack Red" />
+                    <h3>Adirondack Red</h3>
+                    <p>§500</p>
+                    <a href="#">View</a>
 
-        <p>
-            <a href="guitars.html">View Guitars</a>
-        </p>
+                </div>
+                <div>
+                    <img src="#" alt="Adirondack Red" />
+                    <h3>Adirondack Red</h3>
+                    <p>§500</p>
+                    <a href="#">On sale</a>
 
-        <h2>Our Gitars Are:</h2>
-        <ul>
-            <li>Made with real Pennsylvanian wood</li>
-            <li>Crafted by a family-run business</li>
-            <li>Built to last a lifetime</li>
-            <li>Beautiful unique sound</li>
-            <li>Options for all music lovers</li>
-        </ul>
-        <p>Hands strumming guitar</p>
+                </div>
+                <div>
+                    <img src="#" alt="Adirondack Red" />
+                    <h3>Adirondack Red</h3>
+                    <p>§500</p>
+                    <a href="#">View</a>
 
-        <h2>Reviews</h2>
-        <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse provident ducimus explicabo ad minima, nemo
-            beatae!"- Bob Willis</p>
-        <p>Profile pic of Bob Willis</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit."- Sally Oldfield</p>
-        <p>Profile pic of Sally Oldfield</p>
+                </div>
+                <div>
+                    <img src="#" alt="Adirondack Red" />
+                    <h3>Adirondack Red</h3>
+                    <p>§500</p>
+                    <a href="#">View</a>
 
-        <h2>View Our Guitars</h2>
-        <p>Adirondack Red</p>
-        <h3>Adirondack Red</h3>
-        <p>§500</p>
-        <p><a href="adirondack.html">View</a></p><br>
-        Adirondack Red
+                </div>
+            </section>
+
+
+        </section>
 
     </main>
 </body>
 <footer>
+    Copyright &copy;
 
 </footer>
 
