--- a/adirondack.html
+++ b/adirondack.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Guitar Kings</h1>
+        <a href="index.html">Guitar Kings</a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
