--- a/guitars.html
+++ b/guitars.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Guitar Kings</h1>
+        <a href="index.html">Guitar Kings</a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
