Added images and updated html pages

--- a/index.html
+++ b/index.html
@@ -38,47 +38,47 @@
                 </ul>
             </div>
         </section>
-        <img img src="#" alt="Hand Strumming Guitar">
+        <img img src="images/home-info.jpg" alt="Hand Strumming Guitar">
         <section>
             <h2>Reviews</h2>
             <div>
                 <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse provident ducimus explicabo ad
                     minima, nemo
                     beatae!"- Bob Willis</p>
-                <img src="#" alt="Profile Picture of Bob Willis" />
+                <img src="images/review-bob.jpg" alt="Profile Picture of Bob Willis" />
             </div>
             <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit."- Sally Oldfield</p>
-                <img src="#" alt="Profile Picture of Sally Oldfield" />
+                <img src="images/review-sally.jpg" alt="Profile Picture of Sally Oldfield" />
             </div>
             <section>
                 <h2>View Our Guitars</h2>
                 <div>
-                    <img src="#" alt="Adirondack Red" />
+                    <img src="images/product.jpg" alt="Adirondack Red" />
                     <h3>Adirondack Red</h3>
                     <p>§500</p>
-                    <a href="#">View</a>
+                    <a href="/guitars/adirondack.html">View</a>
 
                 </div>
                 <div>
-                    <img src="#" alt="Adirondack Red" />
+                    <img src="images/product.jpg" alt="Adirondack Red" />
                     <h3>Adirondack Red</h3>
                     <p>§500</p>
-                    <a href="#">On sale</a>
+                    <a href="/guitars/adirondack.html">On sale</a>
 
                 </div>
                 <div>
-                    <img src="#" alt="Adirondack Red" />
+                    <img src="images/product.jpg" alt="Adirondack Red" />
                     <h3>Adirondack Red</h3>
                     <p>§500</p>
-                    <a href="#">View</a>
+                    <a href="/guitars/adirondack.html">View</a>
 
                 </div>
                 <div>
-                    <img src="#" alt="Adirondack Red" />
+                    <img src="images/product.jpg" alt="Adirondack Red" />
                     <h3>Adirondack Red</h3>
                     <p>§500</p>
-                    <a href="#">View</a>
+                    <a href="/guitars/adirondack.html">View</a>
 
                 </div>
             </section>
