--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Guitar Kings | Contact Us</title>
 </head>
 
 <body>
@@ -25,5 +25,8 @@
 <main>
     <h1>Contact Us</h1>
 </main>
+<footer>
+    Copyright &copy;
+</footer>
 
 </html>
