--- a/guitars.html
+++ b/guitars.html
@@ -24,7 +24,69 @@
 </body>
 
 <main>
-    <h1>Guitars</h1>
+    <section>
+        <h1>Guitars</h1>
+        <div>
+            <img src="images/product.jpg" alt="Adirondack Red" />
+            <h3>Adirondack Red</h3>
+            <p>§500</p>
+            <a href="/guitars/adirondack.html">View</a>
+        </div>
+        <div>
+            <img src="images/product.jpg" alt="Adirondack Red" />
+            <h3>Adirondack Red</h3>
+            <p>§400</p>
+            <p>§500</p>
+            <a href="/guitars/adirondack.html">On Sale</a>
+        </div>
+        <div>
+            <img src="images/product.jpg" alt="Adirondack Red" />
+            <h3>Adirondack Red</h3>
+            <p>§500</p>
+            <a href="/guitars/adirondack.html">View</a>
+        </div>
+        <div>
+            <img src="images/product.jpg" alt="Adirondack Red" />
+            <h3>Adirondack Red</h3>
+            <p>§500</p>
+            <a href="/guitars/adirondack.html">View</a>
+        </div>
+        <div>
+            <img src="images/product.jpg" alt="Adirondack Red" />
+            <h3>Adirondack Red</h3>
+            <p>§500</p>
+            <a href="/guitars/adirondack.html">View</a>
+        </div>
+        <div>
+            <img src="images/product.jpg" alt="Adirondack Red" />
+            <h3>Adirondack Red</h3>
+            <p>§500</p>
+            <a href="/guitars/adirondack.html">View</a>
+        </div>
+        <div>
+            <img src="images/product.jpg" alt="Adirondack Red" />
+            <h3>Adirondack Red</h3>
+            <p>§500</p>
+            <a href="/guitars/adirondack.html">View</a>
+        </div>
+        <div>
+            <img src="images/product.jpg" alt="Adirondack Red" />
+            <h3>Adirondack Red</h3>
+            <p>§500</p>
+            <a href="/guitars/adirondack.html">View</a>
+        </div>
+        <div>
+            <img src="images/product.jpg" alt="Adirondack Red" />
+            <h3>Adirondack Red</h3>
+            <p>§500</p>
+            <a href="/guitars/adirondack.html">View</a>
+        </div>
+
+    </section>
 </main>
+
+<footer>
+    Copyright &copy;
+</footer>
 
 </html>
