--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="contact Guitar Kings">
+    <link href="/styles/styles.css" rel="stylesheet">
     <title>Guitar Kings | Contact Us</title>
 </head>
 
