--- a/guitars.html
+++ b/guitars.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="list of guitars available from Guitar Kings">
+    <link href="styles/styles.css" rel="stylesheet">
     <title>Guitars</title>
 </head>
 
@@ -24,8 +26,9 @@
 </body>
 
 <main>
+
+    <h1>Guitars</h1>
     <section>
-        <h1>Guitars</h1>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h3>Adirondack Red</h3>
