--- a/guitars/adirondack.html
+++ b/guitars/adirondack.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description"
+        content="information about the most popular guitar from Guitar Kings - the adirondack-red ">
+    <link href="/styles/styles.css" rel="stylesheet">
+    <title>Guitar Kings | Adirondack Red</title>
 </head>
 
 <body>
     <header>
-        <a href="index.html">Guitar Kings</a>
+        <a href="../index.html">Guitar Kings</a>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="guitars.html">Guitars</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../guitars.html">Guitars</a></li>
+                <li><a href="../contact.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -25,10 +28,12 @@
 <main>
     <section>
         <img src="../images/product.jpg" alt="Picture of Adirondack Red Guitar">
-        <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red">
-        <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red">
-        <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red">
-        <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red">
+        <div>
+            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red">
+            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red">
+            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red">
+            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red">
+        </div>
     </section>
     <section>
         <h1>Adirondack Red</h1>
@@ -36,9 +41,8 @@
             quam
             aliquid recusandae iste corporis ab ullam quod accusantium eveniet quasi molestiae, cumque commodi.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        <h3>§500</h3>
-        <br>
-        <h3><a href="contact.html">Contact Us</a></h3>
+        <p>§500</p>
+        <a href="../contact.html">Contact Us</a>
     </section>
 
 </main>
