--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <meta name="description" content="Get real uthentic, hand-crafted guitars from Guitar Kings" />
+    <link href="/styles/styles.css" rel="stylesheet">
+
     <title>Guitar Kings | Home" </title>
 </head>
 
