--- a/guitars.html
+++ b/guitars.html
@@ -33,56 +33,56 @@
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h3>Adirondack Red</h3>
             <p>§500</p>
-            <a href="/guitars/adirondack.html">View</a>
+            <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h3>Adirondack Red</h3>
             <p>§400</p>
             <p>§500</p>
-            <a href="/guitars/adirondack.html">On Sale</a>
+            <a href="/guitars/adirondack.html" class="cta cta-sale">On Sale</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h3>Adirondack Red</h3>
             <p>§500</p>
-            <a href="/guitars/adirondack.html">View</a>
+            <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h3>Adirondack Red</h3>
             <p>§500</p>
-            <a href="/guitars/adirondack.html">View</a>
+            <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h3>Adirondack Red</h3>
             <p>§500</p>
-            <a href="/guitars/adirondack.html">View</a>
+            <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h3>Adirondack Red</h3>
             <p>§500</p>
-            <a href="/guitars/adirondack.html">View</a>
+            <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h3>Adirondack Red</h3>
             <p>§500</p>
-            <a href="/guitars/adirondack.html">View</a>
+            <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h3>Adirondack Red</h3>
             <p>§500</p>
-            <a href="/guitars/adirondack.html">View</a>
+            <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h3>Adirondack Red</h3>
             <p>§500</p>
-            <a href="/guitars/adirondack.html">View</a>
+            <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
 
     </section>
