--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <section>
-            <h1>Authentic Handmade Guitars</h1>
-            <a href="guitars.html">View Guitars</a>
-        </section>
 
     </header>
     <main>
+        <section>
+            <h1>Authentic Handmade Guitars</h1>
+            <a href="guitars.html" class="cta">View Guitars</a>
+        </section>
         <section>
             <div>
                 <h2>Our Gitars Are:</h2>
@@ -41,7 +41,8 @@
             </div>
         </section>
         <img img src="images/home-info.jpg" alt="Hand Strumming Guitar">
-        <section>
+
+        <section class="reviews">
             <h2>Reviews</h2>
             <div>
                 <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse provident ducimus explicabo ad
@@ -53,39 +54,38 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit."- Sally Oldfield</p>
                 <img src="images/review-sally.jpg" alt="Profile Picture of Sally Oldfield" />
             </div>
-            <section>
-                <h2>View Our Guitars</h2>
-                <div>
-                    <img src="images/product.jpg" alt="Adirondack Red" />
-                    <h3>Adirondack Red</h3>
-                    <p>§500</p>
-                    <a href="/guitars/adirondack.html">View</a>
+        </section>
 
-                </div>
-                <div>
-                    <img src="images/product.jpg" alt="Adirondack Red" />
-                    <h3>Adirondack Red</h3>
-                    <p>§500</p>
-                    <a href="/guitars/adirondack.html">On sale</a>
+        <section class="featured">
+            <h2>View Our Guitars</h2>
+            <div class="featured--products">
+                <img src="images/product.jpg" alt="Adirondack Red" />
+                <h3>Adirondack Red</h3>
+                <p>§500</p>
+                <a href="/guitars/adirondack.html" class="cta">View</a>
 
-                </div>
-                <div>
-                    <img src="images/product.jpg" alt="Adirondack Red" />
-                    <h3>Adirondack Red</h3>
-                    <p>§500</p>
-                    <a href="/guitars/adirondack.html">View</a>
+            </div>
+            <div class="featured--products">
+                <img src="images/product.jpg" alt="Adirondack Red" />
+                <h3>Adirondack Red</h3>
+                <p>§500</p>
+                <a href="/guitars/adirondack.html" class="cta cta-sale">On sale</a>
 
-                </div>
-                <div>
-                    <img src="images/product.jpg" alt="Adirondack Red" />
-                    <h3>Adirondack Red</h3>
-                    <p>§500</p>
-                    <a href="/guitars/adirondack.html">View</a>
+            </div>
+            <div class="featured--products">
+                <img src="images/product.jpg" alt="Adirondack Red" />
+                <h3>Adirondack Red</h3>
+                <p>§500</p>
+                <a href="/guitars/adirondack.html" class="cta">View</a>
 
-                </div>
-            </section>
+            </div>
+            <div class="featured--products">
+                <img src="images/product.jpg" alt="Adirondack Red" />
+                <h3>Adirondack Red</h3>
+                <p>§500</p>
+                <a href="/guitars/adirondack.html" class="cta">View</a>
 
-
+            </div>
         </section>
 
     </main>
