--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <a href="index.html">Kings Guitar</a>
+        <a href="index.html" class="logo">Guitar Kings</a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
