--- a/guitars.html
+++ b/guitars.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <a href="index.html">Guitar Kings</a>
+        <a href="index.html" class="logo">Guitar Kings</a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -28,59 +28,59 @@
 <main>
 
     <h1>Guitars</h1>
-    <section>
+    <section class="product-list">
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
-            <h3>Adirondack Red</h3>
+            <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
-            <h3>Adirondack Red</h3>
+            <h2>Adirondack Red</h2>
             <p>§400</p>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta cta-sale">On Sale</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
-            <h3>Adirondack Red</h3>
+            <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
-            <h3>Adirondack Red</h3>
+            <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
-            <h3>Adirondack Red</h3>
+            <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
-            <h3>Adirondack Red</h3>
+            <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
-            <h3>Adirondack Red</h3>
+            <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
-            <h3>Adirondack Red</h3>
+            <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
         <div>
             <img src="images/product.jpg" alt="Adirondack Red" />
-            <h3>Adirondack Red</h3>
+            <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
