--- a/guitars/adirondack.html
+++ b/guitars/adirondack.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <a href="../index.html">Guitar Kings</a>
+        <a href="../index.html" class="logo">Guitar Kings</a>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -42,7 +42,7 @@
             aliquid recusandae iste corporis ab ullam quod accusantium eveniet quasi molestiae, cumque commodi.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         <p>§500</p>
-        <a href="../contact.html">Contact Us</a>
+        <a href="../contact.html" class="cta">Contact Us</a>
     </section>
 
 </main>
