--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <meta name="description" content="Get real uthentic, hand-crafted guitars from Guitar Kings" />
-    <link href="/styles/styles.css" rel="stylesheet">
-
     <title>Guitar Kings | Home" </title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <link href="/styles/styles.css" rel="stylesheet" />
 </head>
 
 <body>
     <header>
-        <a href="index.html">Guitar Kings</a>
+        <a href="index.html" class="logo">Guitar Kings</a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
