updated html homepage and contact

--- a/guitars.html
+++ b/guitars.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="list of guitars available from Guitar Kings">
     <link href="styles/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a1cf958ea2.js" crossorigin="anonymous"></script>
+
     <title>Guitars</title>
 </head>
 
