--- a/guitars/adirondack.html
+++ b/guitars/adirondack.html
@@ -8,6 +8,8 @@
     <meta name="description"
         content="information about the most popular guitar from Guitar Kings - the adirondack-red ">
     <link href="/styles/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a1cf958ea2.js" crossorigin="anonymous"></script>
+
     <title>Guitar Kings | Adirondack Red</title>
 </head>
 
