--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <link href="/styles/styles.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/a1cf958ea2.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -25,11 +27,11 @@
 
     </header>
     <main>
-        <section>
+        <section class="welcome">
             <h1>Authentic Handmade Guitars</h1>
             <a href="guitars.html" class="cta">View Guitars</a>
         </section>
-        <section>
+        <section class="selling-points">
             <div>
                 <h2>Our Gitars Are:</h2>
                 <ul>
@@ -40,20 +42,19 @@
                     <li>Options for all music lovers</li>
                 </ul>
             </div>
+            <img src="images/home-info.jpg" alt="Hand Strumming Guitar" class="selling-points__images" />
         </section>
-        <img img src="images/home-info.jpg" alt="Hand Strumming Guitar">
-
         <section class="reviews">
             <h2>Reviews</h2>
             <div>
                 <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse provident ducimus explicabo ad
                     minima, nemo
                     beatae!"- Bob Willis</p>
-                <img src="images/review-bob.jpg" alt="Profile Picture of Bob Willis" />
+                <img src="images/review-bob.jpg" alt="Profile Picture of Bob Willis" class="review__images" />
             </div>
             <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit."- Sally Oldfield</p>
-                <img src="images/review-sally.jpg" alt="Profile Picture of Sally Oldfield" />
+                <img src="images/review-sally.jpg" alt="Profile Picture of Sally Oldfield" class="review__images" />
             </div>
         </section>
 
