--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="contact Guitar Kings">
     <link href="/styles/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a1cf958ea2.js" crossorigin="anonymous"></script>
+
     <title>Guitar Kings | Contact Us</title>
 </head>
 
@@ -26,6 +28,29 @@
 
 <main>
     <h1>Contact Us</h1>
+    <form method="POST">
+        <label for="name">Full name</label>
+        <input type="text" name="name" id="name">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email">
+        <label for="guitar">Guitar</label>
+        <select id="guitar" name="Guitar">
+            <option value="Adirondack Red">Adirondack Red</option>
+            <option value="Adirondack Blue">Adirondack Blue</option>
+            <option value="Adirondack Green">Adirondack Green</option>
+        </select>
+        <input type="checkbox" id="email-updates" name="email-updates">
+        <label for="email-updates">Sign up for email updates</label>
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message"></textarea>
+
+        <input type="submit" value="Send Now" class="cta">
+    </form>
+
+
+
+
 </main>
 <footer>
     Copyright &copy;
