update html and css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section class="welcome">
             <h1>Authentic Handmade Guitars</h1>
-            <a href="guitars.html" class="cta">View Guitars</a>
+            <a href="guitars.html" class="cta cta-header">View Guitars</a>
         </section>
         <section class="selling-points">
             <div>
