--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
 
         <section class="featured">
             <h2>View Our Guitars</h2>
-            <div class="featured--products">
+            <div class="featured__products">
                 <img src="images/product.jpg" alt="Adirondack Red" />
                 <h3>Adirondack Red</h3>
                 <p>§500</p>
                 <a href="/guitars/adirondack.html" class="cta">View</a>
 
             </div>
-            <div class="featured--products">
+            <div class="featured__products">
                 <img src="images/product.jpg" alt="Adirondack Red" />
                 <h3>Adirondack Red</h3>
                 <p>§500</p>
                 <a href="/guitars/adirondack.html" class="cta cta-sale">On sale</a>
 
             </div>
-            <div class="featured--products">
+            <div class="featured__products">
                 <img src="images/product.jpg" alt="Adirondack Red" />
                 <h3>Adirondack Red</h3>
                 <p>§500</p>
                 <a href="/guitars/adirondack.html" class="cta">View</a>
 
             </div>
-            <div class="featured--products">
+            <div class="featured__products">
                 <img src="images/product.jpg" alt="Adirondack Red" />
                 <h3>Adirondack Red</h3>
                 <p>§500</p>
