--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     </header>
     <main>
         <section class="welcome">
-            <h1>Authentic Handmade Guitars</h1>
-            <a href="guitars.html" class="cta cta-header">View Guitars</a>
+            <div class="welcome__content">
+                <h1>Authentic Handmade Guitars</h1>
+                <a href="guitars.html" class="cta cta-header">View Guitars</a>
+            </div>
         </section>
         <section class="selling-points">
             <div>
