added flexbox assignment

--- a/guitars/adirondack.html
+++ b/guitars/adirondack.html
@@ -27,23 +27,27 @@
     </header>
 </body>
 
-<main>
+<main class="product-specific">
     <section>
-        <img src="../images/product.jpg" alt="Picture of Adirondack Red Guitar">
-        <div>
-            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red">
-            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red">
-            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red">
-            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red">
+        <img src="../images/product.jpg" alt="Picture of Adirondack Red Guitar" class="product-image">
+        <div class="product-image__thumbnails">
+            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red"
+                class="product-image">
+            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red"
+                class="product-image">
+            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red"
+                class="product-image">
+            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red"
+                class="product-image">
         </div>
     </section>
-    <section>
+    <section class="product-specific__details">
         <h1>Adirondack Red</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut ullam iure repellat culpa molestias. In facere
             quam
             aliquid recusandae iste corporis ab ullam quod accusantium eveniet quasi molestiae, cumque commodi.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        <p>§500</p>
+        <p class="product-specific__price">§500</p>
         <a href="../contact.html" class="cta">Contact Us</a>
     </section>
 
