--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <meta name="description" content="Get real uthentic, hand-crafted guitars from Guitar Kings" />
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <title>Guitar Kings | Home" </title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
@@ -33,6 +33,7 @@
                 <a href="guitars.html" class="cta cta-header">View Guitars</a>
             </div>
         </section>
+
         <section class="selling-points">
             <div>
                 <h2>Our Gitars Are:</h2>
@@ -44,19 +45,29 @@
                     <li>Options for all music lovers</li>
                 </ul>
             </div>
-            <img src="images/home-info.jpg" alt="Hand Strumming Guitar" class="selling-points__images" />
+            <figure class="selling-points__images">
+                <img src="images/home-info.jpg" alt="Hand Strumming Guitar" />
+            </figure>
         </section>
+
         <section class="reviews">
             <h2>Reviews</h2>
-            <div>
-                <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse provident ducimus explicabo ad
-                    minima, nemo
-                    beatae!"- Bob Willis</p>
-                <img src="images/review-bob.jpg" alt="Profile Picture of Bob Willis" class="review__images" />
-            </div>
-            <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit."- Sally Oldfield</p>
-                <img src="images/review-sally.jpg" alt="Profile Picture of Sally Oldfield" class="review__images" />
+            <div class="reviews__content">
+                <div>
+                    <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse provident ducimus explicabo ad
+                        minima, nemo
+                        beatae!"<br><br><span class="reviews__name">- Bob Willis</span></p>
+                    <img src="images/review-bob.jpg" alt="Profile Picture of Bob Willis" class="reviews__images" />
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse provident ducimus explicabo ad
+                        minima, nemo
+                        beatae!"<br><br><span class="reviews__name">-
+                            Sally
+                            Oldfield</span></p>
+                    <img src="images/review-sally.jpg" alt="Profile Picture of Sally Oldfield"
+                        class="reviews__images" />
+                </div>
             </div>
         </section>
 
