fixed issues with flexbox and images

--- a/guitars/adirondack.html
+++ b/guitars/adirondack.html
@@ -31,14 +31,22 @@
     <section>
         <img src="../images/product.jpg" alt="Picture of Adirondack Red Guitar" class="product-image">
         <div class="product-image__thumbnails">
-            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red"
-                class="product-image">
-            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red"
-                class="product-image">
-            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red"
-                class="product-image">
-            <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red"
-                class="product-image">
+            <div>
+                <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red"
+                    class="product-image">
+            </div>
+            <div>
+                <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red"
+                    class="product-image">
+            </div>
+            <div>
+                <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red"
+                    class="product-image">
+            </div>
+            <div>
+                <img src="../images/product-spesific.jpg" alt="Picture of a man playing Adirondack Red"
+                    class="product-image">
+            </div>
         </div>
     </section>
     <section class="product-specific__details">
