--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <li>Options for all music lovers</li>
                 </ul>
             </div>
-            <figure class="selling-points__images">
-                <img src="images/home-info.jpg" alt="Hand Strumming Guitar" />
-            </figure>
+            <div>
+                <img class="selling-points__images" src="images/home-info.jpg" alt="Hand Strumming Guitar" />
+            </div>
         </section>
 
         <section class="reviews">
