--- a/guitars.html
+++ b/guitars.html
@@ -27,60 +27,62 @@
     </header>
 </body>
 
-<main>
+<main class="guitars">
 
     <h1>Guitars</h1>
     <section class="product-list">
-        <div>
+        <div class="products">
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
-        <div>
+        <div class="products">
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h2>Adirondack Red</h2>
-            <p>§400</p>
-            <p>§500</p>
-            <a href="/guitars/adirondack.html" class="cta cta-sale">On Sale</a>
+            <div class="products--sale">
+                <p class="old-price">§500</p>
+                <p>§400</p>
+            </div>
+            <a href="/guitars/adirondack.html" class="cta cta-sale cta-small">On Sale</a>
         </div>
-        <div>
-            <img src="images/product.jpg" alt="Adirondack Red" />
-            <h2>Adirondack Red</h2>
-            <p>§500</p>
-            <a href="/guitars/adirondack.html" class="cta">View</a>
-        </div>
-        <div>
+        <div class="products">
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
-        <div>
+        <div class="products">
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
-        <div>
+        <div class="products">
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
-        <div>
+        <div class="products">
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
-        <div>
+        <div class="products">
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h2>Adirondack Red</h2>
             <p>§500</p>
             <a href="/guitars/adirondack.html" class="cta">View</a>
         </div>
-        <div>
+        <div class="products">
+            <img src="images/product.jpg" alt="Adirondack Red" />
+            <h2>Adirondack Red</h2>
+            <p>§500</p>
+            <a href="/guitars/adirondack.html" class="cta">View</a>
+        </div>
+        <div class="products">
             <img src="images/product.jpg" alt="Adirondack Red" />
             <h2>Adirondack Red</h2>
             <p>§500</p>
