--- a/index.html
+++ b/index.html
@@ -73,32 +73,35 @@
 
         <section class="featured">
             <h2>View Our Guitars</h2>
-            <div class="featured__products">
+            <div class="products">
                 <img src="images/product.jpg" alt="Adirondack Red" />
                 <h3>Adirondack Red</h3>
                 <p>§500</p>
-                <a href="/guitars/adirondack.html" class="cta">View</a>
+                <a href="/guitars/adirondack.html" class="cta cta-small">View</a>
 
             </div>
-            <div class="featured__products">
+            <div class="products">
                 <img src="images/product.jpg" alt="Adirondack Red" />
                 <h3>Adirondack Red</h3>
-                <p>§500</p>
-                <a href="/guitars/adirondack.html" class="cta cta-sale">On sale</a>
+                <div class="products--sale">
+                    <p class="old-price">§500</p>
+                    <p>§400</p>
+                </div>
+                <a href="/guitars/adirondack.html" class="cta cta-sale cta-small">On sale</a>
 
             </div>
-            <div class="featured__products">
+            <div class="products">
                 <img src="images/product.jpg" alt="Adirondack Red" />
                 <h3>Adirondack Red</h3>
                 <p>§500</p>
-                <a href="/guitars/adirondack.html" class="cta">View</a>
+                <a href="/guitars/adirondack.html" class="cta cta-small">View</a>
 
             </div>
-            <div class="featured__products">
+            <div class="products">
                 <img src="images/product.jpg" alt="Adirondack Red" />
                 <h3>Adirondack Red</h3>
                 <p>§500</p>
-                <a href="/guitars/adirondack.html" class="cta">View</a>
+                <a href="/guitars/adirondack.html" class="cta cta-small">View</a>
 
             </div>
         </section>
